--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-paper": "^5.10.1",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.10.1",
     "react-native-web": "~0.19.6",
