--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon -r dotenv/config index.js dotenv_config_path=./.env.local"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.35",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
